# ChangeLog for app-admin/clsync
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Aug 2013; Andrew Savchenko <bircoph@gmail.com> -clsync-0.0.ebuild,
  clsync-9999.ebuild:
  Fix html and examples installation. Remove buggy v0.0.

  20 Aug 2013; Andrew Savchenko <bircoph@gmail.com> ChangeLog:
  Initial ebuild.
