@@ -5,7 +5,7 @@
 EAPI=5
 
 if [[ ${PV} == "9999" ]] ; then
-	inherit git-2
+	_GIT=git-2
 	EGIT_REPO_URI="https://github.com/xaionaro/clsync.git"
 	SRC_URI=""
 	KEYWORDS=""
@@ -14,11 +14,15 @@ else
 	KEYWORDS="~x86 ~amd64"
 fi
 
+inherit autotools $_GIT
+
 DESCRIPTION="Live sync tool based on inotify, written in GNU C"
 HOMEPAGE="http://ut.mephi.ru/oss"
 LICENSE="GPL-3"
 SLOT="0"
-IUSE="doc examples hardened"
+IUSE="debug doc +examples extra-hardened hardened"
+REQUIRED_USE="
+	extra-hardened? ( hardened )"
 
 RDEPEND="dev-libs/glib:2"
 DEPEND="${RDEPEND}
@@ -26,17 +30,30 @@ DEPEND="${RDEPEND}
 	doc? ( app-doc/doxygen )
 "
 
+src_prepare() {
+	eautoreconf
+}
+
+src_configure() {
+	local harden_level=0
+	use hardened && harden_level=1
+	use extra-hardened && harden_level=2
+
+	econf \
+		--docdir="${EPREFIX}/usr/share/doc/${PF}" \
+		--enable-paranoid=${harden_level} \
+		$(use_enable debug)
+}
+
 src_compile() {
-	# allow security flags only with hardened
-	use hardened || export CSECFLAGS="" LDSECFLAGS=""
-	CARCHFLAGS="" emake
+	emake
 	use doc && emake doc
 }
 
 src_install() {
-	EXAMPLES="" COMPRESS_MAN="no" STRIP_BINARY="no" \
 	emake DESTDIR="${D}" install
-	dodoc CONTRIB DEVELOPING README.md
 	use doc && dohtml -r doc/html/*
-	use examples && dodoc -r examples
+	# remove unwanted docs
+	rm "${ED}/usr/share/doc/${PF}"/{LICENSE,TODO} || die
+	use examples || rm -r "${ED}/usr/share/doc/${PF}/examples" || die
 }
