@@ -5,4 +5,15 @@
   <email>bircoph@gmail.com</email>
   <name>Andrew Savchenko</name>
 </maintainer>
+<longdescription>
+  Clsync recursively watches for source directory and executes external
+  program to sync the changes. Clsync is adapted to use together with rsync.
+  This utility is much more lightweight than competitors and supports such
+  features as separate queue for big files, regex file filter,
+  multi-threading and multicast notifing clsync instances on another nodes
+  to prevent loop syncing.
+</longdescription>
+<use>
+	<flag name="extra-hardened">Enable extra security checks. This may hurt performance.</flag>
+</use>
 </pkgmetadata>
